:ambulance: fix(download): fix add z-index to download panel

--- a/src/components/Download/DownloadGetCode/DownloadGetCode.scss
+++ b/src/components/Download/DownloadGetCode/DownloadGetCode.scss
@@ -10,7 +10,6 @@
       width: $sizeIconBase;
       height: $sizeIconBase;
       margin-right: $spaceS2;
-      color: transparent;
   }
 
   &__name {
